--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
-@import './theme/colors.scss';
-@import './imports/scss/accordion.scss';
+@import 'src/app/theme/colors.scss';
+@import 'src/app/imports/scss/accordion.scss';
+@import 'src/app/theme/primeng.scss';
 
 .top-navbar {
     position: fixed;
@@ -16,6 +17,8 @@
     transition: .3s all;
 
     user-select: none;
+
+    z-index: 995;
 
     &::after {
         content: "";
@@ -458,6 +461,7 @@
     width: 100%;
     height: fit-content;
 
+    z-index: 10;
     /* background-color:rgb(15, 37, 87); */
 
     
@@ -515,82 +519,6 @@
     }
 }
 
-// user
-/* 
-.user-topbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    height: 100px;
-    width: 100%;
-
-    background-color: rgb(15, 37, 87);
-    border-bottom: 2px solid orange;
-    & > div {
-        &:nth-child(1) {
-            position: absolute;
-            top: 50%;
-            left: 50px;
-            transform: translateY(-50%);
-
-            display: inline-block;
-
-            & > img {
-                max-height: 50px;
-            }
-        }
-
-        &:nth-child(2) {
-            position: absolute;
-            top: 0;
-            left: 0;
-
-            height: 100%;
-            width: 100%;
-
-            & > .welcome-text {
-                display: inline-block;
-                position: absolute;
-                left: 0;
-                top: 20px;
-                
-                height: auto;
-                width: 100%;
-
-                text-align: center;
-                & > span {
-                    display: block;
-                    color: orange;
-                    font-size: 18px;
-                    font-weight: bold;
-                }
-            }
-
-            & > .breadcrumb {
-                position: absolute;
-                left: 50%;
-                bottom: 5px;
-                transform: translateX(-50%);
-            }
-
-            & > .btn-logout {
-                position: absolute;
-                top: 50%;
-                right: 50px;
-                transform: translateY(-50%);
-
-                & > span {
-                    padding: 7px 18px;
-                    background-color: orange;
-                    font-size: 15px;
-                    font-weight: bold;
-                    color: white;
-                }
-            }
-        }
-    }
-} */
 .user-topbar {
     position: fixed;
     top: 0;
@@ -763,26 +691,6 @@
     width: calc(100% - 250px);
 
     background-color: rgb(233, 238, 245);
-}
-
-:host ::ng-deep {
-
-    & .ui-breadcrumb  {
-        background-color: transparent !important;
-
-        border: none;
-    }
-
-    & .ui-breadcrumb-home {
-        font-size: 15px;
-        color: white;
-    }
-
-    & .ui-menuitem-text {
-        color: white;
-
-        font-size: 15px;
-    }
 }
 
 .sidebar-userInfo {
