--- a/src/app/components/pages/activities/events/events.component.scss
+++ b/src/app/components/pages/activities/events/events.component.scss
@@ -1,19 +1,3 @@
-
-
-
-/* 
-.wrapper {
-    position: relative;
-
-    min-height: 100vh;
-    height: fit-content;
-    width: calc(100% - 10%);
-
-    margin: 0 5%;
-    padding-top: 150px;
-    padding-bottom: 50px;
-} */
-
 .wrapper {
     position: relative;
 
@@ -21,11 +5,7 @@
     height: fit-content;
     width: 100%;
 
-    /* margin: 0 100px; */
-   /*  margin-top: 80px; */
-
     background-color: white;
-    /* box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, .1); */
 }
 
 .header-banner > .banner > .svg {
@@ -71,20 +51,24 @@
             padding: 10px 15px;
             margin-bottom: 5px;
 
-            border-radius: 10px;
+            /* border-radius: 6px; */
 
-            background-color: rgba(#929DB9, .5);
+            /* background-color: rgba(#929DB9, .5); */
+            border: 2px solid gray;
 
             overflow: hidden;
 
-            &.active {
-                background-color: rgba(#929DB9, 1);
-                margin-bottom: 20px;
+            cursor: pointer;
 
-                &:last-child {
-                    margin-bottom: 0;
-                    margin-top: 15px;
-                }
+            transform: translateZ(10px);
+
+            transition: .3s all;
+            &.active {
+                transform: translateZ(50px);
+                border: 2px solid orange;
+                border-left: 10px solid orange;
+                /* background-color: rgba(#929DB9, 1); */
+                /* margin-bottom: 20px; */
             }
 
             &:last-child {
@@ -104,10 +88,38 @@
 
     /* background-color: #C8CEDC; */
 
+    & > .filters {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+
+        padding: 15px 30px;
+
+        display: flex;
+        justify-content: flex-end;
+
+        background-color: white;
+
+        box-shadow: 1px 1px 5px 0 rgba(black, .2);
+
+        margin-bottom: 15px;
+
+        & > .item {
+            position: relative;
+
+            height: fit-content;
+            width: fit-content;
+
+            margin-left: 30px;
+        }
+    }
+
     & > .events-items {
         position: relative;
 
         height: fit-content;
+        min-height: 50vh;
         width: 100%;
 
         & > .item {
@@ -116,14 +128,14 @@
             height: fit-content;
             width: 100%;
 
-            padding: 10px 30px;
-
             margin-bottom: 30px;
 
-            border-radius: 0 15px 0 15px;
+            border-radius: 6px;
             box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, .3);
 
             overflow: hidden;
+
+            background-color: #fff;
 
             & > .img {
                 position: absolute;
@@ -133,27 +145,47 @@
                 height: 100%;
                 width: 300px;
 
-                background-image: url('../../../../../assets/sunge\ perak.jpg');
+                /* background-image: url('/src/assets/stock/event.jpg'); */
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
+
+                box-shadow: 0 0 10px 0px orange;
             }
 
             & > .info {
                 position: relative;
 
-                height: 200px;
+                height: 250px;
                 width: calc(100% - 300px);
 
                 margin-left: 300px;
 
-                padding: 10px 20px;
+                padding: 15px 30px;
+
+                & > .cluster {
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+
+                    height: fit-content;
+                    width: fit-content;
+
+                    padding: 10px 30px;
+
+                    color: orange;
+                    text-transform: uppercase;
+
+                    box-shadow: none;
+                }
 
                 & > .title {
                     position: relative;
 
                     height: fit-content;
                     width: fit-content;
+
+                    padding: 10px 0;
 
                     font-size: 24px;
                     font-weight: bold;
@@ -165,7 +197,9 @@
                     height: 90px;
                     width: 100%;
 
-                    font-size: 16px;
+                    font-size: 14px;
+
+                    margin-bottom: 30px;
 
                     overflow: hidden;
 
@@ -181,17 +215,39 @@
                     }
                 }
 
-                & > .btn-read {
+                & > .stats {
                     position: absolute;
-                    bottom: 10px;
                     left: 30px;
+                    bottom: 10px;
 
                     height: fit-content;
                     width: fit-content;
 
-                    padding: 10px 20px;
+                    display: flex;
+                    justify-content: space-between;
+                    flex-wrap: wrap;
 
-                    background-color: orange;
+                    & > .item {
+                        position: relative;
+
+                        height: fit-content;
+                        width: fit-content;
+
+                        padding-right: 30px;
+                    }
+                }
+
+                & > .btn-read {
+                    position: absolute;
+                    bottom: 10px;
+                    right: 30px;
+
+                    height: fit-content;
+                    width: fit-content;
+
+                    padding: 5px 15px;
+
+                    border-bottom: 2px solid orange;
 
                     cursor: pointer;
                 }
@@ -383,6 +439,8 @@
 
         display: flex;
 
+        background-color: #fff;
+
         & > .thumbnail {
             position: relative;
 
@@ -464,6 +522,8 @@
     border-radius: 3px;
 
     overflow: hidden;
+
+    background-color: #fff;
 
     & > .header {
         position: relative;
@@ -547,6 +607,107 @@
     &:hover {
         & > .img {
             transform: scale(1.05);
+        }
+    }
+}
+
+.event-read {
+    position: relative;
+
+    height: fit-content;
+    width: 100%;
+
+    border-radius: 6px;
+
+    padding: 30px 0;
+
+    box-shadow: 1px 1px 5px 1px rgba(black, .2);
+
+    & > .title {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+
+        font-size: 40px;
+
+        padding: 10px 50px
+    }
+
+    & > .stats {
+        position: relative;
+
+        height: fit-content;
+        width: fit-content;
+
+        display: flex;
+
+        padding: 10px 50px;
+        margin-bottom: 30px;
+
+        & > .item {
+            position: relative;
+
+            height: fit-content;
+            width: fit-content;
+
+            padding-right: 30px;
+
+            &.author {
+                color: gray;
+            }
+            &.date {
+                color: gray;
+            }
+            &.ecluster {
+                color: orange;
+                font-weight: bold;
+            }
+        }
+    }
+
+    & > .img {
+        position: relative;
+
+        height: 80vh;
+        width: 100%;
+
+        background-image: url('/assets/stock/event.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    & > .content {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+
+        font-size: 18px;
+
+        padding: 50px 80px;
+
+        text-align: justify;
+    }
+
+    & > .btn-back {
+        position: relative;
+
+        height: fit-content;
+        width: fit-content;
+
+        padding: 10px 40px;
+        margin: 0 auto;
+
+        background-color: orange;
+
+        border-radius: 60px;
+
+        cursor: pointer;
+
+        & > i {
+            padding-right: 10px;
         }
     }
 }
