--- a/src/app/components/pages/activities/gcp/gcp.component.html
+++ b/src/app/components/pages/activities/gcp/gcp.component.html
@@ -16,6 +16,7 @@
     </div>
 
     <div class="content">
+        <div class="bg-poly-overlay"></div>
         <div class="header">
             <span>What is GCP?</span>
         </div>
