--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -1,6 +1,7 @@
 <div class="bg">
-    <div class="bg-overlay"></div>
-    <div class="bg-img"></div>
+    <div class="bg-color"></div>
+    <div class="bg-poly-overlay"></div>
+    
 </div>
 <div class="wrapper">
     <div class="btn-close" (click)="this.close()">
