--- a/src/app/components/pages/membership/membership.component.html
+++ b/src/app/components/pages/membership/membership.component.html
@@ -1,7 +1,3 @@
-<!-- <div class="page-header">
-    <app-section-page-header></app-section-page-header>
-</div> -->
-
 <div class="wrapper">
   <div class="header-banner">
     <div class="bg-poly-overlay"></div>
@@ -20,6 +16,7 @@
   </div>
 
   <div class="section s1">
+    <div class="bg-poly-overlay"></div>
     <div class="section-header">
       <span>Join the community!</span>
     </div>
