--- a/src/app/components/pages/about/contact/contact.component.html
+++ b/src/app/components/pages/about/contact/contact.component.html
@@ -16,6 +16,7 @@
     </div>
 
     <div class="container">
+        <div class="bg-poly-overlay"></div>
         <div class="intro">
             <div class="header">
                 <span>We would love to hear from you</span>
@@ -89,11 +90,11 @@
             </div>
         </div>
 
-        <div class="social-media">
+        <!-- <div class="social-media">
             <div class="header">
                 <span>Our social media</span>
             </div>
-        </div>
+        </div> -->
     </div>
     
 </div>
