--- a/src/app/components/pages/about/team/team.component.scss
+++ b/src/app/components/pages/about/team/team.component.scss
@@ -1,10 +1,17 @@
+:host ::ng-deep {
+    .ui-node-toggler {
+        margin-left: -8px !important;
+    }
+    .ui-organizationchart-node-content {
+        padding: 0 !important;
+    }
+}
 .wrapper {
     position: relative;
 
     min-height: 100vh;
     height: fit-content;
     width: 100%;
-
     /* margin: 0 100px; */
    /*  margin-top: 80px; */
 
@@ -26,4 +33,170 @@
     width: 100%;
 
     padding: 100px 12%;
+}
+
+.org-chart {
+    position: relative;
+
+    height: fit-content;
+    width: 100%;
+
+    & > .label {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+
+        padding: 10px 30px;
+
+        text-align: center;
+
+        font-size: 40px;
+    }
+
+    & > .chart {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+
+        padding: 80px 30px;
+
+        & .photo {
+            position: relative;
+
+            height: 200px;
+            width: 100%;
+
+            margin: 0 auto;
+
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+        }
+
+        & .name, .contacts, .role {
+            position: relative;
+
+            height: fit-content;
+            width: 100%;
+
+            padding: 15px;
+
+            text-align: center;
+        }
+        & .contacts {
+            padding-top: 0;
+
+            display: flex;
+            justify-content: space-around;
+
+            & > a {
+                display: block;
+
+                text-decoration: none;
+
+                color: gray;
+                font-size: 25px;
+
+                padding: 5px;
+
+                transition: .3s all;
+                &:hover {
+                    color: orange;
+                }
+            }
+        }
+        & .role {
+            background-color: orange;
+            color: white;
+            font-weight: bold;
+
+            text-transform: uppercase;
+        }
+    }
+
+    & > .excos {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+
+        display: flex;
+        justify-content: center;
+
+        flex-wrap: wrap;
+
+        margin-top: 50px;
+
+        & > .exco {
+            position: relative;
+            
+            height: 400px;
+            width: 200px;
+
+            border: 1px solid #c8c8c8;
+
+            border-radius: 3px;
+
+            margin: 5px;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            & .photo {
+                position: relative;
+    
+                height: 200px;
+                width: 100%;
+    
+                margin: 0 auto;
+    
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
+            }
+    
+            & .name, .contacts, .role {
+                position: relative;
+    
+                height: fit-content;
+                width: 100%;
+    
+                padding: 15px;
+    
+                text-align: center;
+            }
+            & .contacts {
+                padding-top: 0;
+    
+                display: flex;
+                justify-content: space-around;
+    
+                & > a {
+                    display: block;
+    
+                    text-decoration: none;
+    
+                    color: gray;
+                    font-size: 25px;
+    
+                    padding: 5px;
+    
+                    transition: .3s all;
+                    &:hover {
+                        color: orange;
+                    }
+                }
+            }
+            & .role {
+                background-color: orange;
+                color: white;
+                font-weight: bold;
+    
+                text-transform: uppercase;
+            }
+        }
+    }
 }
