--- a/src/app/components/pages/activities/events/events.component.html
+++ b/src/app/components/pages/activities/events/events.component.html
@@ -7,144 +7,96 @@
                     <span>Events</span>
                 </div>
                 <div class="brief">
-                    <span>List of MyRAS events</span>
+                    <span>Keep yourself updated!</span>
                 </div>
             </div>
            
             <div class="svg"></div>
         </div>
     </div>
-
-    <div class="content">
-        <div class="cluster-nav">
-            <div class="nav-items">
-                <div class="item">
-                    <div class="label">
-                        <span>Industry</span>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="label">
-                        <span>Government</span>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="label">
-                        <span>Academia</span>
-                    </div>
-                </div>
-                <div class="item active">
-                    <div class="label">
-                        <span>Public</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="events">
-            <div class="events-items">
-                <div class="item" *ngFor="let item of [0, 0, 0, 0, 0, 0, 0, 0]">
-                    <div class="img"></div>
-                    <div class="info">
-                        <div class="title">
-                            <span>Heading here sire</span>
-                        </div>
-                        <div class="brief">
-                            <span>Put 'em brief here Put 'em brief herePut 'em brief herePut 'em brief herePut 'em brief herePut 'em brief herePut 'em brief herePut 'em brief herePut 'em brief herePut 'em brief herePut 'em brief herePut 'em brief here</span>
-                            <div class="overflow-cover"></div>
-                        </div>
-                        <div class="btn-read">
-                            <span>Read more</span>
+    
+    <div class="content" #content>
+        <div class="bg-poly-overlay"></div>
+        <ng-container *ngIf="!reading">
+            <div class="cluster-nav" [@inOutAnimation]>
+                <div class="nav-items">
+                    <div class="item" [class.active]="(cnav.name === activeCluster)" (click)="selectCluster(cnav.name)" *ngFor="let cnav of clusterNav; let x = index">
+                        <div class="label">
+                            <span>{{ cnav.label }}</span>
                         </div>
                     </div>
-                </div>
-            </div>
-            <p-paginator [rows]="10" [totalRecords]="30"></p-paginator>
-        </div>
-        <!-- <div class="cluster">
-            <div class="cluster-nav">
-                <div class="cluster-nav-item" *ngFor="let item of [['Industry', 'fas fa-industry'], ['Government', 'fas fa-university'], ['Academia','fas fa-graduation-cap'], ['Public', 'fas fa-users']]; let x = index" [class.active]="this.clusterIndex === x" (click)="this.clusterIndex = x">
-                    <div>
-                        <i [class]="item[1]" ></i>
-                        <span>{{ item[0] }}</span>
-                    </div>
-                    
                 </div>
             </div>
     
-            <div class="cluster-content">
-                <div class="body">
-                    <div class="card">
-                        <div class="header">
-                            <div class="header-line"></div>
-                            <div class="header-label">
-
-              :                  <span>Events</span>
+            <div class="events">
+                <div class="filters">
+                    <div class="item">
+                        <div class="ui-inputgroup">
+                            <input type="text" pInputText placeholder="Keyword">   
+                            <button pButton type="button" icon="pi pi-search" class="ui-button-warn"></button>      
+                        </div>
+                    </div>
+                    <div class="item">
+                        <p-dropdown [options]="sortItems" [(ngModel)]="activeSort"></p-dropdown>
+                    </div>
+                </div>
+                <div class="events-items">
+                    <div class="item" [@eventItem] *ngFor="let event of events">
+                        <div class="img" [style.backgroundImage]="'url(' + event.imgPath + ')'" ></div>
+                        <div class="info">
+                            <div class="cluster">
+                                <span>{{ event.cluster.value }}</span>
                             </div>
-                        </div>
-    
-                        <div class="event-content">
-                            <div class="event-items">
-                                <div class="item" *ngFor="let item of [0, 0, 0]">
-                                    <div class="thumbnail">
-                                        <div class="img"></div>
-                                    </div>
-                                    <div class="details">
-                                        <div class="header">
-                                            <span>Event header here</span>
-                                        </div>
-                                        <div class="body">
-                                            <span>
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                                Event body here
-
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                                Event body here
-                                            </span>
-                                        </div>
-                                        <div class="footer">
-                                            <div class="date">
-                                                <i class="fas fa-times"></i>
-                                                <span>
-                                                    29 April 2020
-                                                </span>
-                                            </div>
-                                            <div class="views">
-                                                <i class="fas fa-times"></i>
-                                                <span>
-                                                    UMP Gambang
-                                                </span>
-                                            </div>
-                                            <div class="views">
-                                                <i class="fas fa-times"></i>
-                                                <span>
-                                                    10 views
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
+                            <div class="title">
+                                <span>{{ event.title }}</span>
+                            </div>
+                            <div class="brief">
+                                <span>{{ event.brief }}</span>
+                                <div class="overflow-cover"></div>
+                            </div>
+                            <div class="stats">
+                                <div class="item" *ngFor="let stat of event.stats">
+                                    <!-- <i [class]="stat.icon"></i> -->
+                                    <span>{{ stat.value }} </span>
+                                    <span>{{ stat.label }}</span>
+                                    
                                 </div>
                             </div>
-                            <p-paginator [rows]="10" [totalRecords]="30"></p-paginator>
+                            <div class="btn-read" (click)="toggleRead(true)">
+                                <span>Read more</span>
+                            </div>
                         </div>
                     </div>
-                    
+                </div>
+                <p-paginator [rows]="10" [totalRecords]="30"></p-paginator>
+            </div>
+        </ng-container>
+        
+        <ng-container *ngIf="reading">
+            <div class="event-read" [@inOutAnimation]>
+                <div class="bg-poly-overlay"></div>
+                <div class="title">
+                    <span>{{ readEventData.title }}</span>
+                </div>
+                <div class="stats">
+                    <div class="item" [class]="item.class" *ngFor="let item of readEventData.stats" >
+                        <span>{{ item.val }}</span>
+                    </div>
+                </div>
+    
+                <div class="img"></div>
+    
+                <div class="content">
+                    <p>{{ readEventData.content }}</p>
+                    <p>{{ readEventData.content }}</p>
+                </div>
+
+                <div class="btn-back" (click)="toggleRead(false)">
+                    <i class="fas fa-arrow-left"></i>
+                    <span>Go back</span>
                 </div>
             </div>
-        </div> -->
+        </ng-container>
     </div>
     
 </div>
