--- a/src/app/components/pages/activities/gcp/gcp.component.scss
+++ b/src/app/components/pages/activities/gcp/gcp.component.scss
@@ -100,6 +100,8 @@
             height: 300px;
             width: 100%;
 
+            background-color: #fff;
+
             /* border: 1px solid rgba(black, .5); */
 
             border-radius: 5px;
