--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -26,7 +26,7 @@
                 <span>{{ item.brief }}</span>
             
                 <div class="btn-hollow"> 
-                    <span (click)="routeTo(item.path)" >Take a look</span>
+                    <span (click)="togglePopupVideo(true)" >Take a look</span>
                 </div>
     
             </div>
@@ -95,96 +95,27 @@
 </div>
 
 <div class="section s4">
-    
-</div>
-
-<!-- <div class="section s2">
-    <div class="header" data-aos="zoom-out">
-        <span>Latest News</span>
+    <div class="section-header">
+        <span>Sponsors</span>
     </div>
 
-    <div class="body">
-        <p-carousel *ngIf="this.loaded" [value]="news" [numVisible]="3" [numScroll]="1" [responsiveOptions]="this.carousel.responsive" [autoplayInterval]="5000">
-            <ng-template let-news pTemplate="item">
-                <div class="ui-g hcarousel-item">
-                    <div class="ui-g-6">
-                        <div class="photo" data-aos="zoom-out" data-aos-duration="1000">
-                            <img [ngStyle]="{'background-image':'url('+news.img+')'}" alt="">
-                        </div>
-                    </div>
-                    <div class="ui-g-6">
-                        <div class="hcarousel-desc" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300">
-                            <div class="header">
-                                <span>{{ news.title }}</span>
-                            </div>
-                            <div class="body">
-                                <span>{{ news.desc }}</span>
-                            </div>
-                            <div class="btn-next">
-                                <span>Read more</span>
-                            </div>
-                        </div>
-    
-                        
-                    </div>
+    <div class="section-body">
+        <div class="partners">
+            <div class="item" *ngFor="let key of obj2Arr(partners); let x = index">
+                <div class="partner-label">
+                    <span>{{ partners[key].label }}</span>
                 </div>
+                <div class="body">
+                    <p-carousel [circular]="true" [numScroll]="1" [autoplayInterval]="5000 + (x * 300)" [numVisible]="4" [value]="partners[key].items">
+                        <ng-template let-item pTemplate="item">
+                            <a class="logo" target="_blank" href="https://myras.org/"[style.backgroundImage]="'url(' + item.logo + ')'" >
 
-            </ng-template>
-        </p-carousel>
-    </div>
-   
-</div>
- -->
-
-<!-- <div class="section s3">
-    <div class="header" data-aos="zoom-out">
-        <span>Competition</span>
-    </div>
-
-    <div class="body">
-        <div>
-            <div class="header" data-aos="fade-down">
-                <span>Title</span>
-            </div>
-
-            <div class="body" data-aos="fade-down">
-                <span>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Ut aliquet mauris justo, pharetra pretium massa lobortis sed. 
-                    Vivamus elementum eros a bibendum fringilla. 
-                    Cras condimentum suscipit consequat. Phasellus 
-                    nibh arcu, sagittis sit amet aliquet et, molestie 
-                    vel nulla. Morbi lacinia sem non tortor sodales rhoncus.
-                </span>
-            </div>
-            <div class="footer" data-aos="fade-down">
-                <div class="btn-next">
-                    <span>Read More</span>
+                            </a>
+                        </ng-template>
+                    </p-carousel>
                 </div>
-            </div>
-        </div>
-        <div>
-            <div class="header" data-aos="fade-down" data-aos-delay="300">
-                <span>Title</span>
-            </div>
-
-            <div class="body" data-aos="fade-down" data-aos-delay="300">
-                <span>
-                    Nam interdum, nibh id volutpat hendrerit, 
-                    magna sem mollis lacus, non ullamcorper eros est 
-                    quis metus. Nunc ullamcorper accumsan ipsum, et 
-                    pulvinar justo elementum ac. Nunc blandit metus 
-                    sem, eu ultricies sem scelerisque et. Phasellus 
-                    sollicitudin consectetur magna, ac molestie arcu 
-                    volutpat ut. 
-                </span>
-            </div>
-            <div class="footer" data-aos="fade-down" data-aos-delay="300">
-                <div class="btn-next">
-                    <span>Read More</span>
-                </div>
+                
             </div>
         </div>
     </div>
-    
-</div> -->
+</div>
