--- a/src/app/components/pages/login/login.component.scss
+++ b/src/app/components/pages/login/login.component.scss
@@ -23,7 +23,7 @@
         
         filter: grayscale(1);
 
-        z-index: 1;
+        z-index: 2;
 
 
     }
@@ -42,6 +42,17 @@
         opacity: .9;
 
         z-index: 2;
+    }
+    & > .bg-color {
+        position: absolute;
+        left: 0;
+        top: 0;
+
+        height: 100%;
+        width: 100%;
+
+        background-color: rgb(15, 37, 87);
+
     }
 }
 .btn-close {
