--- a/src/app/components/sections/footer/footer.component.scss
+++ b/src/app/components/sections/footer/footer.component.scss
@@ -62,6 +62,7 @@
             justify-content: space-between;
 
             & > .item {
+                display: block;
                 position: relative;
 
                 height: fit-content;
@@ -90,6 +91,32 @@
 
         padding: 50px 200px;
         padding-bottom: 30px;
+
+        & > .home {
+            position: relative;
+
+            height: fit-content;
+            width: fit-content;
+            
+            margin: 0 auto;
+            margin-bottom: 30px;
+            padding: 10px 30px;
+
+            color: white;
+            font-size: 24px;
+            
+            opacity: .7;
+
+            cursor: pointer;
+
+            transition: .3s all;
+            &:hover {
+                color: orange;
+            }
+            &:focus {
+                outline: none;
+            }
+        }
 
         & > .items {
             position: relative;
@@ -135,6 +162,10 @@
 
                     &:hover {
                         color: orange;
+                    }
+
+                    &:focus {
+                        outline: none;
                     }
                 }
             }
@@ -214,287 +245,11 @@
         transition: .3s all;
 
         &:hover {
-            opacity: 1;
+            /* opacity: 1; */
             & > .info > .logo {
                 filter: grayscale(0);
             }
         }
     }
-    /* & > .header {
-        position: relative;
-
-        height: fit-content;
-        width: 100%;
-
-        padding: 30px 0;
-
-        text-align: center;
-
-        font-size: 30px;
-        font-weight: bolder;
-        color: orange;
-    }
-
-    & > .myras-brief {
-        position: relative;
-
-        margin-left: auto;
-        margin-right: auto;
-
-        height: fit-content;
-        width: 40%;
-        min-width: 400px;
-
-        text-align: center;
-
-        font-size: 18px;
-        color: white;
-
-        margin-bottom: 30px;
-    }
-
-    & > .myras-contact {
-        position: relative;
-
-        height: fit-content;
-        width: 100%;
-    } */
-}
-
-/* .wrapper {
-    position: relative;
-
-    height: calc(100% - 100px);
-    width: 100%;
-
-}
-
-.left {
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    height: 100%;
-    width: 50%;
-
-    padding: 30px;
-
-    & > .footer-info {
-        position: relative;
-
-        height: 100%;
-        width: 100%;
-        & > span {
-            display: block;
-
-            font-size: 15px;
-            color: white;
-            line-height: 25px;
-        }
-        & > .header {
-            font-size: 25px;
-            color: orange;
-
-            padding-bottom: 25px;
-
-        }
-
-        & > .brief {
-            display: inline-block;
-            width: 50%;
-
-            text-align: justify;
-        }
-
-        & > .email {
-            padding-top: 20px;
-
-            & > span {
-                font-weight: bold;
-            }
-        }
-
-        & > .address {
-            display: inline-block;
-            position: absolute;
-            left: 0;
-            bottom: 0;
-        }
-    }
-}
-.right {
-    position: absolute;
-    top: 0;
-    left: 50%;
-
-    height: 100%;
-    width: 50%;
-
-    padding: 30px;
-
-    & > .footer-navlinks {
-        position: relative;
-
-        height: 100%;
-        width: 100%;
-
-        font-size: 18px;
-        & > .header {
-            font-size: 25px;
-            color: orange;
-        }
-
-        & > ul {
-            list-style: none;
-
-            padding: 0;
-            padding-left: 15px;
-            color: white;
-
-            font-size: 15px;
-            & > li {
-                position: relative;
-
-                padding-left: 15px;
-                padding-bottom: 8px;
-
-                display: block;
-
-                &:hover {
-                    cursor: pointer;
-                }
-
-                &:before {
-                    position: absolute;
-                    left: 0;
-                    bottom: 0;
-
-                    font-size: 30px;
-                    content: '\2023';
-                    color: orange;
-
-                    opacity: 1;
-                    transition: .3s all;
-                    border-left: 0px solid orange;
-                }
-            }
-        }
-    }
-    & > .logo{
-        position: relative;
-        display: inline-block;
-
-        padding-right: 10px;
-        
-        & > img{
-            position: relative;
-            width: 100px;
-            right:20%;
-        }
-        
-    }
     
-    
-
-    & > .contacts {
-        position: absolute;
-        right: 20%;
-        bottom: 50px;
-        transform: translateX(-50%);
-
-        font-size: 20px;
-        color: white;
-
-        & > .header {
-            color: orange;
-            font-size: 22px;
-
-            padding-bottom: 5px;
-        }
-
-        & > .contact-items {
-            position: relative;
-
-            & > div {
-                position: relative;
-                display: inline-block;
-
-                padding-right: 10px;
-
-                &:hover {
-                    cursor: pointer;
-                    transform: scale(1.5);
-                }
-
-                transform-origin: bottom;
-                transform: scale(1);
-                transition: .3s all;
-            }
-            
-        }
-       
-    }
-
 }
-
-.others {
-    position: relative;
-
-    height: 50px;
-    width: 100%;
-
-    & > .items {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-
-        height: auto;
-        width: auto;
-
-        font-size: 18px;
-        color: white;
-
-        & > div {
-            display: inline-block;
-
-            position: relative;
-
-            padding-right: 30px;
-            padding-left: 30px;
-
-            border-right: 2px solid white;
-
-            &:hover {
-                cursor: pointer;
-            }
-
-            &:last-child {
-                border-right: 0;
-            }
-        }
-    }
-
-    border-bottom: 1px solid orange;
-}
-.copyright {
-    position: relative;
-
-    height: 50px;
-    width: 100%;
-
-    & > span {
-        display: inline-block;
-        position: absolute;
-        top: 50%;
-        left: 0;
-        transform: translateY(-50%);
-
-        width: 100%;
-
-        font-size: 15px;
-        color: white;
-
-        text-align: center;
-    }
-} */
